--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-Gemini_API_KEY="AIzaSyA7qqVEEzCKqYGx5KhIyCGPimJR_wReloE"
-OPEN_WEATHER_API_KEY="7108e851dc38cffd27de4520df006d31"
+Gemini_API_KEY="your_API_key
+OPEN_WEATHER_API_KEY="your_API_key"
